--- a/.github/workflows/R2C-OpenWrt.yml
+++ b/.github/workflows/R2C-OpenWrt.yml
@@ -1,10 +1,9 @@
 name: R2C-OpenWrt
 
 on:
-#  schedule:
-#    - cron: 5 6 * * 0
-  watch:
-    types: started
+  repository_dispatch:
+  workflow_dispatch:
+
 
 jobs:
   build:
@@ -14,6 +13,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@main
+      
     - name: Show system
       run: |
         echo -e "Total CPU cores\t: $(nproc)"
@@ -24,6 +24,7 @@ jobs:
         [ -f /etc/issue.net ] && cat /etc/issue.net
         [ -f /etc/issue ] && cat /etc/issue
         ulimit -a
+        
     - name: Free disk space
       run: |
         sudo -E swapoff -a
@@ -36,6 +37,7 @@ jobs:
         sudo -E rm -rf /usr/share/dotnet /usr/local/lib/android/sdk /etc/mysql /etc/php /usr/local/share/boost
         [ -n "$AGENT_TOOLSDIRECTORY" ] && sudo rm -rf "$AGENT_TOOLSDIRECTORY"
         df -h
+        
     - name: Init build dependencies
       env:
         DEBIAN_FRONTEND: noninteractive
@@ -47,12 +49,14 @@ jobs:
         sudo -E apt-get clean -y
         git config --global user.name 'GitHub Actions' && git config --global user.email 'noreply@github.com'
         df -h
+        
     - name: Prepare Mixedwrt
       run: |
-        sudo chown -R runner:runner /home/runner/work/YAOF
+        sudo chown -R runner:runner /home/runner/work/Nanopi
         cp -r ./SCRIPTS/R2S/. ./SCRIPTS/
         cp -r ./SCRIPTS/. ./
         /bin/bash 01_get_ready.sh
+        
     - name: Prepare Package
       run: |
         cd openwrt
@@ -63,19 +67,23 @@ jobs:
         cp -r ../SCRIPTS/. ./
         /bin/bash 02_prepare_package.sh
         /bin/bash 02_target_only.sh
+        
     - name: Convert Translation
       run: |
         cd openwrt
         /bin/bash 03_convert_translation.sh
+        
     - name: Add ACL
       run: |
         cd openwrt
         /bin/bash 05_create_acl_for_luci.sh -a
+        
     - name: Make Config
       run: |
         cd openwrt
         mv ../SEED/R2C/config.seed .config
         make defconfig
+        
     - name: Smart chmod
       run: |
         MY_Filter=$(mktemp)
@@ -85,17 +93,20 @@ jobs:
         find ./ -type f | grep -v -f ${MY_Filter} | xargs -s1024 file | grep 'executable\|ELF' | cut -d ':' -f1 | xargs -s1024 chmod 755
         rm -f ${MY_Filter}
         unset MY_Filter
+        
     - name: Make Download
       run: |
         df -h
         cd openwrt
         make download -j50
+        
     - name: Make Toolchain
       run: |
         df -h
         cd openwrt
         let make_process=$(nproc)+2
         make toolchain/install -j${make_process} || make toolchain/install -j${make_process} V=s
+        
     - name: Compile Openwrt
       id: compileopenwrt
       continue-on-error: true
@@ -105,14 +116,17 @@ jobs:
         let Make_Process=$(nproc)+2
         make -j${Make_Process} || make -j${Make_Process} V=s
         echo $?
+        
     - name: If Error
       if: steps.compileopenwrt.outcome == 'failure'
       run: |
         cat openwrt/.config
         echo '================================================================'
         cd openwrt && make -j1 V=s
+        
     - name: Print Disk Space After
       run: df -h
+      
     - name: Organize files
       id: organize
       run: |
@@ -124,24 +138,23 @@ jobs:
         gzip -d *.gz && exit 0
         gzip --best *.img
         ls -Ahl
-        sha256sum openwrt*r2c* | tee R2C-GC404-$(date +%Y-%m-%d)-21.02.sha256sum
-        zip R2C-GC404-$(date +%Y-%m-%d)-21.02-ext4.zip *r2c*ext4*
-        zip R2C-GC404-$(date +%Y-%m-%d)-21.02-sfs.zip *r2c*squashfs*
+        sha256sum openwrt*r2s* | tee R2S-$(date +%Y-%m-%d)-21.02.sha256sum
+        zip R2S-$(date +%Y-%m-%d)-21.02-ext4.zip *r2s*ext4*
+        zip R2S-$(date +%Y-%m-%d)-21.02-sfs.zip *r2s*squashfs*
         ls -Ahl
+        
     - name: Upload artifact
       uses: actions/upload-artifact@main
       with:
         name: OpenWRT_21.02
         path: ./artifact/
 
-    - name: Create release
-      id: create_release
-      uses: ncipollo/release-action@v1.8.0
+    - name: Upload release asset
+      uses: svenstaro/upload-release-action@v2
       with:
-        name: OpenWRT-21.02.0-RC4
-        allowUpdates: true
-        tag: 21.02.0-rc4
-        commit: master
-        replacesArtifacts: true
-        token: ${{ secrets.workflow_token }}
-        artifacts: ./artifact/*.zip
+        repo_token: ${{ secrets.workflow_token }}
+        file: ./artifact/*.zip
+        tag: ${{env.strDate}}
+        file_glob: true
+        overwrite: true
+        release_name: ${{env.strDate}}-openwrt-21.02更新
