--- a/.github/workflows/R2C-OpenWrt.yml
+++ b/.github/workflows/R2C-OpenWrt.yml
@@ -138,9 +138,9 @@ jobs:
         gzip -d *.gz && exit 0
         gzip --best *.img
         ls -Ahl
-        sha256sum openwrt*r2s* | tee R2S-$(date +%Y-%m-%d)-21.02.sha256sum
-        zip R2S-$(date +%Y-%m-%d)-21.02-ext4.zip *r2s*ext4*
-        zip R2S-$(date +%Y-%m-%d)-21.02-sfs.zip *r2s*squashfs*
+        sha256sum openwrt*r2c* | tee R2C-$(date +%Y-%m-%d)-21.02.sha256sum
+        zip R2C-$(date +%Y-%m-%d)-21.02-ext4.zip *r2c*ext4*
+        zip R2C-$(date +%Y-%m-%d)-21.02-sfs.zip *r2c*squashfs*
         ls -Ahl
         
     - name: Upload artifact
