--- a/.github/workflows/Update.yml
+++ b/.github/workflows/Update.yml
@@ -38,7 +38,7 @@ jobs:
       uses: peter-evans/repository-dispatch@v1
       with:
         token: ${{ secrets.workflow_token }}
-        event-type: Update openwrt
+        event-type: Update
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
