--- a/.github/workflows/R2C-OpenWrt.yml
+++ b/.github/workflows/R2C-OpenWrt.yml
@@ -52,7 +52,7 @@ jobs:
 
     - name: Prepare Mixedwrt
       run: |
-        sudo chown -R runner:runner /home/runner/work/YAOF
+        sudo chown -R runner:runner /home/runner/work/Nanopi
         cp -r ./SCRIPTS/R2S/. ./SCRIPTS/
         cp -r ./SCRIPTS/. ./
         /bin/bash 01_get_ready.sh
@@ -157,4 +157,4 @@ jobs:
         tag: ${{env.strDate}}
         file_glob: true
         overwrite: true
-        release_name: ${{env.strDate}}-openwrt-21.02更新
+        release_name: ${{env.strDate}}-openwrt-21.02-0
