--- a/.github/workflows/X86-OpenWrt.yml
+++ b/.github/workflows/X86-OpenWrt.yml
@@ -59,6 +59,10 @@ jobs:
     - name: Prepare Package
       run: |
         cd openwrt
+        rm -rf target/linux/rockchip
+        svn co https://github.com/immortalwrt/immortalwrt/branches/master/target/linux/rockchip target/linux/rockchip
+        rm -rf package/boot
+        svn co https://github.com/immortalwrt/immortalwrt/branches/master/package/boot package/boot
         cp -r ../SCRIPTS/. ./
         /bin/bash 02_prepare_package.sh
         /bin/bash 02_target_only.sh
@@ -77,6 +81,7 @@ jobs:
       run: |
         cd openwrt
         mv ../SEED/X86/config.seed .config
+        #echo -e 'CONFIG_DEVEL=y\nCONFIG_CCACHE=y' >> .config
         make defconfig
 
     - name: Smart chmod
@@ -89,18 +94,17 @@ jobs:
         rm -f ${MY_Filter}
         unset MY_Filter
 
+    - name: Cache
+      uses: klever1988/cachewrtbuild@main
+      with:
+        ccache: 'true'
+        prefix: ${{ github.workspace }}/openwrt
+
     - name: Make Download
       run: |
         df -h
         cd openwrt
         make download -j50
-
-    - name: Make Toolchain
-      run: |
-        df -h
-        cd openwrt
-        let make_process=$(nproc)+2
-        make toolchain/install -j${make_process} V=s
 
     - name: Compile Openwrt
       id: compileopenwrt
@@ -108,8 +112,7 @@ jobs:
       run: |
         df -h
         cd openwrt
-        let Make_Process=$(nproc)+2
-        make -j${Make_Process} V=w
+        make -j$(($(nproc) + 1)) || make -j$(($(nproc) + 1)) V=s
         echo $?
 
     - name: If Error
@@ -153,4 +156,4 @@ jobs:
         tag: ${{env.strDate}}
         file_glob: true
         overwrite: true
-        release_name: ${{env.strDate}}-openwrt-21.02更新
+        release_name: ${{env.strDate}}-openwrt-21.02-0
